fix centering for header img on mobile

--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -5,6 +5,7 @@
   width: 100%;
   background-color:$header-desc-background-color;
   background-size: cover;
+  background-position-x: center;
   font-size: 1.2em;
   text-align: center;
   color: $header-desc-text-color;
